--- a/tsconfig.tooling.json
+++ b/tsconfig.tooling.json
@@ -1,6 +1,8 @@
 {
   "include": [
     "./lib/**/*.*",
+
+    "./.config/**/*.*",
     "**/eslint.config.*",
     "**/prettier.config.*",
     "**/tsup.config.*",
