--- a/lib/tsconfig.base.node@20.json
+++ b/lib/tsconfig.base.node@20.json
@@ -7,7 +7,7 @@
     "moduleResolution": "nodenext",
 
     "lib": ["es2023"],
-    "types": ["node.20"],
+    "types": ["node"],
 
     "resolveJsonModule": true
   }
