--- a/lib/tsconfig.base.node@22.json
+++ b/lib/tsconfig.base.node@22.json
@@ -7,7 +7,7 @@
     "moduleResolution": "nodenext",
 
     "lib": ["es2023"],
-    "types": ["node.22"],
+    "types": ["node"],
 
     "resolveJsonModule": true
   }
