--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "dependencies": {},
   "peerDependencies": {
     "@eslint/js": "~9.19.0",
-    "@types/node.20": "npm:@types/node@~20.17.17",
-    "@types/node.22": "npm:@types/node@~22.13.1",
+    "@types/node": "~22.13.1",
     "eslint": "~9.19.0",
     "eslint-config-prettier": "~10.0.1",
     "eslint-plugin-import-x": "~4.6.1",
