--- a/package.json
+++ b/package.json
@@ -38,5 +38,12 @@
     "typescript": "~5.7.3",
     "typescript-eslint": "~8.22.0",
     "vue-eslint-parser": "~9.4.3"
+  },
+  "overrides": {
+    "array-includes": "npm:@nolyfill/array-includes@^1",
+    "array.prototype.flat": "npm:@nolyfill/array.prototype.flat@^1",
+    "is-core-module": "npm:@nolyfill/is-core-module@^1",
+    "object.assign": "npm:@nolyfill/object.assign@^1",
+    "object.values": "npm:@nolyfill/object.values@^1"
   }
 }
