--- a/lib/tsconfig.base.vite-node.json
+++ b/lib/tsconfig.base.vite-node.json
@@ -4,8 +4,6 @@
     "module": "NodeNext",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-
-    "types": []
+    "resolveJsonModule": true
   }
 }
