--- a/lib/tsconfig.base.vite.json
+++ b/lib/tsconfig.base.vite.json
@@ -4,8 +4,6 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-
-    "types": []
+    "resolveJsonModule": true
   }
 }
