--- a/lib/tsconfig.base.vite-node.json
+++ b/lib/tsconfig.base.vite-node.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "module": "NodeNext",
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true
+
+    // Allowed but not needed.
+    // "allowImportingTsExtensions": true,
   }
 }
