--- a/lib/tsconfig.base.vite.json
+++ b/lib/tsconfig.base.vite.json
@@ -3,8 +3,15 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "bundler",
+
     "resolveJsonModule": true,
-    "allowArbitraryExtensions": true
-    // "allowImportingTsExtensions": true, Allowed but not needed.
+    "allowArbitraryExtensions": true,
+
+    // By default this is set to `true` because of `moduleResolution:bundler`.
+    //  This is not exactly incorrect, but we disable it in favor of explicitness.
+    "allowSyntheticDefaultImports": false,
+
+    // Allowed but not needed.
+    "allowImportingTsExtensions": false
   }
 }
