--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@my/configs.js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -30,7 +31,7 @@
     "@eslint/js": "~9.22.0",
     "eslint": "~9.22.0",
     "eslint-config-prettier": "~10.1.1",
-    "eslint-plugin-import-x": "~4.6.1",
+    "eslint-plugin-import-x": "~4.8.0",
     "eslint-plugin-n": "~17.16.2",
     "eslint-plugin-sonarjs": "~3.0.2",
     "eslint-plugin-unicorn": "~57.0.0",
