--- a/lib/tsconfig.base.node@22.json
+++ b/lib/tsconfig.base.node@22.json
@@ -6,7 +6,10 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
 
-    "lib": ["es2023"],
+    // Should be es2022, but in fact have many backported features,
+    //  like iterator helpers
+    // https://github.com/tsconfig/bases/pull/299
+    "lib": ["es2023", "ESNext.Array", "ESNext.Collection", "ESNext.Iterator"],
     "types": ["node"],
 
     "resolveJsonModule": true
