--- a/lib/tsconfig.base.json
+++ b/lib/tsconfig.base.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    // Without this `*.tsbuildinfo` file will be created on project root.
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+
     "types": [],
     "isolatedModules": true,
     "moduleDetection": "force",
