--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "./*": "./lib/*"
   },
   "scripts": {
-    "eslint:inspect": "eslint --inspect-config"
+    "eslint:inspect": "eslint --inspect-config",
+    "nolyfill": "npx nolyfill"
   },
   "dependencies": {},
   "devDependencies": {
