--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,6 @@
   "eslint.format.enable": true,
   "eslint.runtime": "node",
 
-  "cSpell.language": "en,ru",
+  "cSpell.language": "en",
   "cSpell.words": ["browserslistrc", "nolyfill", "sonarjs", "uncategorized"]
 }
