--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "peerDependencies": {
     "@eslint/js": "~9.39.1",
+    "@types/node": "~22.18.12",
     "eslint": "~9.39.1",
     "eslint-config-prettier": "~10.1.8",
     "eslint-plugin-import-x": "~4.16.1",
