--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,7 @@
 # https://docs.npmjs.com/cli/v11/using-npm/config
 
+# strict-peer-deps = true
+
 save-prefix = ~
 ignore-scripts = true
 fund = false
