--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "is-core-module": "npm:@nolyfill/is-core-module@^1",
     "object.assign": "npm:@nolyfill/object.assign@^1",
     "object.values": "npm:@nolyfill/object.values@^1"
+  },
+  "dependencies": {
+    "type-fest": "~5.3.0"
   }
 }
