--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,16 +1,10 @@
 {
-  "include": [
-    "./.config/**/*.*",
-    "**/eslint.config.*",
-    "**/prettier.config.*",
-    "**/tsup.config.*",
-    "**/vite.config.*"
-  ],
+  "include": ["./lib/**/*.*"],
   "extends": ["./lib/tsconfig.base.json", "./lib/tsconfig.base.node@24.json"],
 
   "compilerOptions": {
     // Without this `*.tsbuildinfo` file will be created on project root.
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.tooling.tsbuildinfo",
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.lib.tsbuildinfo",
 
     "composite": true,
     "noEmit": true,
