--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "include": [],
-  "references": [{ "path": "tsconfig.tooling.json" }]
+  "references": [
+    { "path": "tsconfig.tooling.json" },
+    { "path": "tsconfig.lib.json" }
+  ]
 }
