--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -3,17 +3,11 @@
     "@my/configs.js-public/tsconfig.base.json",
     "@my/configs.js-public/tsconfig.base.node@24.json"
   ],
-  "include": [
-    "./.config/**/*.*",
-    "**/eslint.config.*",
-    "**/prettier.config.*",
-    "**/tsup.config.*",
-    "**/vite.config.*"
-  ],
+  "include": ["./lib/**/*.*"],
 
   "compilerOptions": {
     // Without this `*.tsbuildinfo` file will be created on project root.
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.tooling.tsbuildinfo",
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.lib.tsbuildinfo",
 
     "composite": true,
     "noEmit": true,
