--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
   "recommendations": [
     "danvk.any-xray",
     "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
+    "prettier.prettier-vscode",
     "Gruntfuggly.todo-tree",
     "pflannery.vscode-versionlens",
     "streetsidesoftware.code-spell-checker-russian",
