--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@:nolyfill": "npx nolyfill"
   },
   "devDependencies": {
-    "@my/configs.js-public": "git+https://github.com/HotCherryPie/configs.js.git#semver:v0.0.0-alpha-11"
+    "@types/node": "^24.10.1"
   },
   "peerDependencies": {
     "@eslint/js": "~9.39.1",
@@ -46,7 +46,7 @@
     "globals": "~16.5.0",
     "prettier": "~3.7.4",
     "typescript": "~5.9.3",
-    "typescript-eslint": "~8.48.1",
+    "typescript-eslint": "~8.49.0",
     "vue-eslint-parser": "~10.2.0"
   },
   "overrides": {
