--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@:nolyfill": "npx nolyfill"
   },
   "devDependencies": {
+    "@my/configs.js-public": "git+https://github.com/HotCherryPie/configs.js.git#semver:v0.0.0-alpha-14",
     "@types/node": "^24.10.1"
   },
   "peerDependencies": {
